# pilotsuite-styx-ha

./: .gitignore  AGENTS.md  CHANGELOG.md  CHANGELOG_DEV.md  CLAUDE.md  CLEANUP_BRANCHES.md  GROKY_DEV_CHECK.md  HANDBUCH.md  HEARTBEAT.md  IMPLEMENTATION_TODO.md  INDEX.md  MEMORY.md  PHASE5_IMPLEMENTATION.md  PHASE5_TODO.md  PILOTSUITE_ROADMAP_2026.md  PROJECT_STATUS.md  PROJEKTPLAN.md  README.md  RELEASE_MACHINE.md  RELEASE_NOTES.md  SETUP.md  STRUKTURPLAN.md  SYNC_LOG.md  TODOS.md  TOOLS.md  VISION.md  VISION_MODELS.md  automation_deckenlicht.yaml  autopilot.cron  autopilot_RELEASE_NOTES.md  autopilot_status.json  groky_dev_check.py  hacs.json  homeassistant_skill_setup.md  input_boolean.yaml  last_orchestrator_report.txt  manifest.json  pytest.ini  release_notes.md  repository.json  (+2 more)
.github/: pull_request_template.md
.openclaw/: workspace-state.json
copilot_core/: .dockerignore  CHANGELOG.md  DOCS.md  Dockerfile  config.json  config.yaml  manifest.json
custom_components/: __init__.py
docs/: API_REFERENCE.md  ARCHITECTURE.md  ARCHITECTURE_DUAL_REPO.md  AUDIT_2026_02.md  BRAIN_GRAPH.md  CHANGELOG_DEV.md  DASHBOARD_LOVELACE.md  DEEPSEEK_R1_SCOPE.md  DEEP_RESEARCH_CONCEPT_VERIFICATION.md  DEVELOPER_GUIDE.md  DEVLOGS.md  DEV_BRANCH.md  DEV_SURFACE.md  DEV_WORKLOG.md  ETHICS_GOVERNANCE.md  FUNCTION_MAP.md  HABITUS_DASHBOARD_CARDS.md  HABITUS_DASHBOARD_CARDS_REPORT.md  HABITUS_ZONES.md  HANDBOOK.md  IMPLEMENTATION_ROADMAP.md  INSTALLATION.md  INTEGRATION_CONCEPT_v10.5.md  INTEGRATION_CONCEPT_v11.2_LIVE_HA.md  (+20 more)
sdk/python/: README.md  package.json  pyproject.toml
(+1253 files in other folders)
